--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+<script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js" crossorigin></script>
+
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,6 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <!-- favicon -->
     <link rel="icon" type="fav.png" href="assets/images/fav.png"/>
@@ -70,5 +75,11 @@
     new WOW().init();
 </script>
 <script src="assets/js/main.js"></script>
+<!-- Include jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Include Bootstrap JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
   </body>
 </html>
